--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=back
-spring.datasource.url=jdbc:mysql://localhost:3306/patrones-users?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://10.108.0.171:3306/patrones-users?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://${DB_SERVER_IP}:3306/patrones-users?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
