--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=back
-#spring.datasource.url=jdbc:mysql://10.108.0.171:3306/patrones-users?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://${DB_SERVER_IP}:3306/patrones-users?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://10.109.23.233:3306/patrones-users?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://${DB_SERVER_IP}:3306/patrones-users?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
